--- a/start.html
+++ b/start.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>روابط مستر فيصل</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
@@ -167,6 +168,10 @@
 
       .yt-overlay .subtitle {
         font-size: 26px;
+      }
+
+      .yt-overlay .stat {
+        font-size: 14px;
       }
     }
   </style>
