--- a/start.html
+++ b/start.html
@@ -195,7 +195,7 @@
     </div>
 
     <div class="buttons">
-      <a href="https://www.mrfaisal.net/%D9%85%D9%86%D8%B5%D8%AA%D9%86%D8%A7" class="button-link">منصتنا التعليمية 🏫</a>
+      <a href="cors.html" class="button-link">منصتنا التعليمية 🏫</a>
       <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D9%85%D8%AA%D8%A7%D8%A8%D8%B9%D9%87-%D8%A7%D9%84%D8%AE%D8%A7%D8%B5%D8%A9-%D8%A8%D9%86%D8%A7" class="button-link">المتابعة 📱</a>
       <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D9%85%D9%88%D8%A7%D8%B9%D9%8A%D8%AF" class="button-link">مواعيدنا ⏰</a>
       <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D8%A7%D9%85%D8%AA%D8%AD%D8%A7%D9%86%D8%A7%D8%AA-%D8%A7%D9%84%D8%AE%D8%A7%D8%B5%D8%A9-%D8%A8%D9%86%D8%A7" class="button-link">الامتحانات 📝</a>
