--- a/motaba.html
+++ b/motaba.html
@@ -137,7 +137,7 @@
 
     <!-- الكروت -->
     <div class="cards">
-      <a href="https://www.mrfaisal.net/المتابعه-الخاصة-بنا/متابعه-ولي-الامر" class="card" target="_blank">
+      <a href="father.html" class="card" target="_blank">
         <div class="emoji">👨‍👩‍👧</div>
         <h3>متابعة ولي الأمر</h3>
       </a>
