--- a/father.html
+++ b/father.html
@@ -1,1 +1,219 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>كروت المتابعة</title>
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+  <style>
+    body {
+      font-family: 'Tahoma', sans-serif;
+      background: linear-gradient(to left, #f0f8ff, #e6f2ff);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin: 0;
+      padding: 15px;
+    }
+
+    .heading {
+      font-size: 20px;
+      font-weight: bold;
+      color: #003366;
+      background: #d0e8ff;
+      padding: 12px 18px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      text-align: center;
+      animation: fadeIn 1.5s ease-in-out;
+      max-width: 90%;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-15px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .lottie-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .cards-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .card {
+      width: 260px;
+      height: 170px;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      transition: transform 0.4s ease, background 0.4s ease;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      color: #333;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+      background: #d6eaff;
+    }
+
+    .emoji {
+      font-size: 45px;
+      animation: bounce 2s infinite;
+    }
+
+    .label {
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
+
+    /* Modal styles */
+    .modal {
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.5);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 25px;
+      border-radius: 15px;
+      text-align: center;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      max-width: 300px;
+    }
+
+    .modal-content h3 {
+      margin-bottom: 20px;
+      font-size: 18px;
+    }
+
+    .modal-content button {
+      font-size: 16px;
+      padding: 10px 20px;
+      margin: 8px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      background: #0077cc;
+      color: white;
+      transition: background 0.3s;
+    }
+
+    .modal-content button:hover {
+      background: #005fa3;
+    }
+
+    @media (max-width: 480px) {
+      .card {
+        width: 90%;
+        height: 150px;
+      }
+      .label {
+        font-size: 18px;
+      }
+      .heading {
+        font-size: 18px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="heading">
+    ⚠️ متابعة ولي الأمر تصنع الفارق في مستقبل الطالب... كن شريكًا في نجاح ابنك 🎓
+  </div>
+
+  <!-- Lottie Animation -->
+  <div class="lottie-box">
+    <dotlottie-wc src="https://lottie.host/197d95ea-0e53-406a-907e-07f7cd4a66d6/7OL5JBDT2C.lottie" 
+                  style="width: 250px; height: 250px;" 
+                  speed="1" autoplay loop></dotlottie-wc>
+  </div>
+
+  <!-- Cards -->
+  <div class="cards-container">
+    <div class="card" onclick="openModal('attendance')">
+      <div class="emoji">📅</div>
+      <div class="label">متابعة الحضور</div>
+    </div>
+
+    <div class="card" onclick="openModal('grades')">
+      <div class="emoji">📊</div>
+      <div class="label">متابعة الدرجات</div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal" id="levelModal">
+    <div class="modal-content">
+      <h3>اختر المرحلة الدراسية</h3>
+      <button onclick="goToLink('1')">تانية ثانوي</button>
+      <button onclick="goToLink('2')">تالتة ثانوي</button>
+    </div>
+  </div>
+
+  <script>
+    let selectedType = '';
+
+    function openModal(type) {
+      selectedType = type;
+      document.getElementById("levelModal").style.display = "flex";
+    }
+
+    function goToLink(level) {
+      const links = {
+        attendance: {
+          "1": "https://www.mrfaisal.net/%D8%AD%D8%B6%D9%88%D8%B1-2%D8%AB",
+          "2": "https://www.mrfaisal.net/الحضور"
+        },
+        grades: {
+          "1": "https://www.mrfaisal.net/%D8%AF%D8%B1%D8%AC%D8%A7%D8%AA-2%D8%AB",
+          "2": "https://www.mrfaisal.net/النتيجه"
+        }
+      };
+
+      const link = links[selectedType][level];
+      if (link) {
+        window.open(link, "_blank");
+      }
+
+      document.getElementById("levelModal").style.display = "none";
+    }
+
+    window.onclick = function(event) {
+      const modal = document.getElementById("levelModal");
+      if (event.target === modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
+
+</body>
+</html>
 
