--- a/father.html
+++ b/father.html
@@ -190,7 +190,7 @@
       const links = {
         attendance: {
           "1": "https://www.mrfaisal.net/%D8%AD%D8%B6%D9%88%D8%B1-2%D8%AB",
-          "2": "hdortalta.gs"
+          "2": "hdortalta.html"
         },
         grades: {
           "1": "https://www.mrfaisal.net/%D8%AF%D8%B1%D8%AC%D8%A7%D8%AA-2%D8%AB",
