--- a/hdortalta.html
+++ b/hdortalta.html
@@ -181,7 +181,7 @@ function doGet() {
           loadingScreen.style.display = "flex";
 
           const id = form.id.value.trim();
-          const url = "https://script.google.com/macros/s/AKfycbziGaD00u76kIdsCgZoIYtaet8tGAU1q97NrnZfsusFHo1kkrbqYoK4BICIAVgnYDDvWw/exec?id=" + encodeURIComponent(id);
+          const url = "ntigahdortalta.html" + encodeURIComponent(id);
 
           setTimeout(() => {
             window.location.href = url;
