--- a/ntigahdortalta.html
+++ b/ntigahdortalta.html
@@ -39,52 +39,55 @@ function doGet(e) {
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            overflow: hidden;
           }
 
           .card {
             background: #fff8e1;
-            padding: 25px 20px;
-            border-radius: 25px;
-            box-shadow: 0 12px 30px rgba(0,0,0,0.1);
-            z-index: 1;
-            width: 90%;
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            width: 95%;
             max-width: 420px;
             text-align: center;
-            animation: slideUp 1.2s ease;
+            animation: slideUp 1s ease;
           }
 
           @keyframes slideUp {
-            from { opacity: 0; transform: translateY(40px); }
+            from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
           }
 
           h2 {
             color: #ff9800;
             margin-bottom: 10px;
-            font-size: 26px;
+            font-size: 22px;
           }
 
           .subtitle {
             color: #fb8c00;
             background-color: #ffe0b2;
-            padding: 12px;
-            border-radius: 15px;
-            margin-bottom: 20px;
-            font-size: 16px;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            font-size: 14px;
             font-weight: bold;
+          }
+
+          .table-container {
+            overflow-x: auto;
           }
 
           table {
             width: 100%;
             border-collapse: collapse;
-            margin: 20px 0;
+            margin-top: 10px;
           }
 
           th, td {
-            padding: 12px;
+            padding: 10px;
             border: 1px solid #ffcc80;
-            font-size: 17px;
+            font-size: 14px;
+            white-space: nowrap;
           }
 
           th {
@@ -93,15 +96,20 @@ function doGet(e) {
           }
 
           .svg-icon {
-            width: 120px;
+            width: 90px;
             margin: 10px auto;
             animation: float 3s infinite ease-in-out;
           }
 
           @keyframes float {
             0% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
+            50% { transform: translateY(-8px); }
             100% { transform: translateY(0); }
+          }
+
+          @media (min-width: 600px) {
+            h2 { font-size: 26px; }
+            th, td { font-size: 16px; }
           }
         </style>
       </head>
@@ -115,12 +123,14 @@ function doGet(e) {
           </svg>
           <h2>📋 حضور الطالب</h2>
           <div class="subtitle">خاص بطلاب الصف الثالث فقط</div>
-          <table>
-            <tr><th>👦 اسم الطالب</th><td>${name}</td></tr>
-            <tr><th>🧭 اسم السنتر</th><td>${geo}</td></tr>
-            <tr><th>📅 حضور الأسبوع 1</th><td>${week1Attendance}</td></tr>
-            <tr><th>📅 حضور الأسبوع 2</th><td>${week2Attendance}</td></tr>
-          </table>
+          <div class="table-container">
+            <table>
+              <tr><th>👦 اسم الطالب</th><td>${name}</td></tr>
+              <tr><th>🧭 اسم السنتر</th><td>${geo}</td></tr>
+              <tr><th>📅 الأسبوع 1</th><td>${week1Attendance}</td></tr>
+              <tr><th>📅 الأسبوع 2</th><td>${week2Attendance}</td></tr>
+            </table>
+          </div>
         </div>
       </body>
       </html>
@@ -135,6 +145,7 @@ function doGet(e) {
     <html dir="rtl" lang="ar">
     <head>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <style>
         @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@600&display=swap');
         body {
@@ -144,32 +155,30 @@ function doGet(e) {
           justify-content: center;
           align-items: center;
           min-height: 100vh;
-          text-align: center;
           padding: 20px;
+          text-align: center;
         }
         .container {
           animation: shake 0.6s;
         }
         h3 {
           color: #e53935;
-          font-size: 24px;
+          font-size: 20px;
         }
         .svg-icon {
-          width: 100px;
-          margin: 20px auto;
+          width: 80px;
+          margin: 10px auto;
           animation: float 3s infinite ease-in-out;
         }
-
         @keyframes shake {
           0%, 100% { transform: translateX(0); }
           25% { transform: translateX(-4px); }
           50% { transform: translateX(4px); }
           75% { transform: translateX(-4px); }
         }
-
         @keyframes float {
           0% { transform: translateY(0); }
-          50% { transform: translateY(-10px); }
+          50% { transform: translateY(-8px); }
           100% { transform: translateY(0); }
         }
       </style>
